[project]
name = "comfyui-photomaker-plus"
description = "ComfyUI reference implementation for [a/PhotoMaker](https://github.com/TencentARC/PhotoMaker) models. [w/WARN:The repository name has been changed. For those who have previously installed it, please delete custom_nodes/ComfyUI-PhotoMaker from disk and reinstall this.]"
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/shiimizu/ComfyUI-PhotoMaker-Plus"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-PhotoMaker-Plus"
Icon = ""
